globus-gridftp-server (7.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 09:36:57 -0500

globus-gridftp-server (7.1-1+gt6.@distro@) @distro@; urgency=low

  * Packagin fixes

 -- Globus Toolkit <support@globus.org>  Thu, 13 Feb 2014 11:52:23 -0500

globus-gridftp-server (7.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 15:00:44 -0500

globus-gridftp-server (6.40-1) unstable; urgency=low

  * GT-480: Implement GO plan for HTTP protocol support

 -- Globus Toolkit <support@globus.org>  Thu, 12 Dec 2013 17:30:14 -0600

globus-gridftp-server (6.39-1) unstable; urgency=low

  * GT-485: ~ defaults to / if the home dir path contains a symlink that leads outside of rp list
  * GT-487: Normalize paths passed via key=value; paramters
  * Fix possible race with command status markers
  * code cleanup

 -- Globus Toolkit <support@globus.org>  Mon, 25 Nov 2013 15:16:41 -0600

globus-gridftp-server (6.38-1) unstable; urgency=low

  * Update dependencies for new credential/assist functions

 -- Globus Toolkit <support@globus.org>  Mon, 28 Oct 2013 14:14:25 -0400

globus-gridftp-server (6.37-2) unstable; urgency=low

  * Update dependencies for new credential/assist functions

 -- Globus Toolkit <support@globus.org>  Mon, 28 Oct 2013 13:58:20 -0400

globus-gridftp-server (6.37-1) unstable; urgency=low

  * GT-374: Can't share files in a path structure with symlinks
  * GT-428: Improve handling of hanging GridFTP server processes
  * GT-469: MFMT/UTIME update access time but shouldn't

 -- Globus Toolkit <support@globus.org>  Tue, 15 Oct 2013 08:56:52 -0500

globus-gridftp-server (6.36-1) unstable; urgency=low

  * GT-368: Fix log message concatination when writing to syslog
  * GT-420: revert to documented behavior for restricted paths

 -- Globus Toolkit <support@globus.org>  Thu, 15 Aug 2013 07:52:27 -0500
